Обработала некорректный ввод особых пожеланий